# HASA

./: .gitignore  README.md  install_docker.sh
allegro_leader/: install.sh  setup.py
allegro_leader/allegro_leader/: __init__.py  teleop_base.py
allegro_leader/allegro_leader/algo/: __init__.py  teleop_precesion_grasp.py
allegro_leader/allegro_leader/dynamixel/: __init__.py  driver.py
allegro_leader/allegro_leader/vis/: __init__.py  allegro_vis.py
allegro_leader/example/: teleop_virtual.py
allegro_leader/example.py/: get_state.py
docker/docker/: Dockerfile  docker-compose.yml
docker/work/example/: motion_example.py  replay_motion.py
example/launcher/: tactile_launch.py
example/launcher/allegro_config/: config.yaml
example/launcher/sensor_launcher/: config.yaml
example/launcher/tactile_config/: config.yaml
example/script/: example_data.py  example_motion.py  example_multimodal.py  teleop.py  vis.py
host/: build_ws.sh
manus_ros2_ws/install/: local_setup.sh  setup.sh
manus_ros_ws/src/manus_glove_bridge/: CMakeLists.txt  package.xml
manus_ros_ws/src/manus_glove_bridge/launch/: rviz_hand.launch
manus_ros_ws/src/manus_glove_bridge/src/: manus_glove_node.cpp
manus_ros_ws/src/manus_glove_bridge/urdf/: manus_hand.urdf
ros_ws/: build_ws.sh
ros_ws/logs/allegro_hand_controllers/: build.make.002.log.stderr
ros_ws/logs/xela_py/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
ros_ws/src/allegro_package/: package.xml
ros_ws/src/py_node_exec/: build_ws.sh  setup.py
ros_ws/src/xela_package/xela_py/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/xela_package/xela_py/src/xela_py/: __init__.py  xela_py.py
ros_ws/src/xela_package/xela_server_ros/: CMakeLists.txt
ros_ws/src/xela_package/xela_server_ros/config/: index.ini  middle.ini  ring.ini  thumb.ini
ros_ws/src/xela_package/xela_server_ros/launch/: tactile_publisher.launch
ros_ws/src/xela_package/xela_server_ros/scripts/: can_up  xela_server  xela_service
user/ueno/launcher/: allegro_launcher.py  tactile_launch.py
user/ueno/script/: example_motion.py  example_tactile.py
(+143 files in other folders)
