<?xml version="1.0"?>
<package format="2">
  <name>allegro_package</name>
  <version>0.0.0</version>
  <description>The allegro_package package</description>
  <maintainer email="takahisaueno@fuji.waseda.jp">takahisaueno</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <export>
  </export>
</package>
