<?xml version="1.0"?>
<package format="2">
  <name>xela_py</name>
  <version>0.0.0</version>
  <description>The xela_py package</description>
  <maintainer email="takahisaueno@fuji.waseda.jp">takahisaueno</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>xela_server_ros</depend>
  <export>
  </export>
</package>
